<resources>
    <string name="app_name">RupiSmart</string>
    <string name="title_history">History</string>
    <string name="title_camera">Scan Nominal</string>
    <string name="title_help">Help</string>
    <string name="title_setting">Settings</string>
    <string name="lang_title">Language</string>
    <string name="language_app_icon">Language App Icon</string>
    <string name="click_to_change_lang">click to change language</string>
    <string name="pref_title">Preferences</string>
    <string name="dark_mode_pref">Dark Mode</string>
    <string name="talkback">Talkback</string>
    <string name="permission_request_denied">Permission Denied</string>
    <string name="fail_to_upload_scan">Failed to Fetch Data, Please Try Again</string>
    <string name="fail_to_get_img">Failed to Fetch Image</string>
    <string name="on_process">Scanning in Progress, Please Wait</string>
    <string name="show_camera_failed">Failed to Display Camera</string>
    <string name="just_now">just now</string>
    <string name="min_ago">%1$s minutes ago</string>
    <string name="hour_ago">%1$s hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="click_one">Click Once to Scan Money</string>
    <string name="verified">VERIFIED</string>
    <string name="title_camera2">Scan Authenticity</string>
    <string name="switch_to">Switch to %1$s</string>
    <string name="hundred">One Hundred</string>
    <string name="five_hundred">Five Hundred</string>
    <string name="one_hundred_thousand">One Hundred Thousand</string>
    <string name="ten_thousand">Ten Thousand</string>
    <string name="thousand">One Thousand</string>
    <string name="two_thousand">Two Thousand</string>
    <string name="twenty_thousand">Twenty Thousand</string>
    <string name="fifty_thousand">Fifty Thousand</string>
    <string name="five_thousand">Five Thousand</string>
    <string name="seventy_five_thousand">Seventy-Five Thousand</string>
    <string name="auth">Money</string>
    <string name="camera_fail">Failed to Display Camera.</string>
    <string name="try_again_later">Try Again Later</string>
    <string name="intro_logo">RupiSmart</string>
    <string name="help_image">Help Image</string>
    <string name="dark_mode_switch">Dark Mode Switch</string>

</resources>