<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.setting.SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mainAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/chevron_left_24px"
            app:title="@string/title_setting" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_lang_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/lang_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <RelativeLayout
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_setting_layout"
        android:id="@+id/rl_lang_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lang_setting_title">

        <ImageView
            android:id="@+id/iv_lang_setting"
            android:layout_width="40dp"
            android:contentDescription="@string/language_app_icon"
            android:padding="10dp"
            android:layout_height="40dp"
            android:src="@drawable/lang_icon"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_setting_iv"
            />

        <TextView
            android:id="@+id/tv_lang_setting"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/iv_lang_setting"
            android:text="@string/lang_title"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/click_to_change_lang"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <TextView

        android:id="@+id/tv_pref_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/pref_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_lang_setting" />
    <RelativeLayout
        android:id="@+id/rl_pref_setting"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pref_setting_title">

        <ImageView
            android:id="@+id/iv_dark_mode_setting"
            android:layout_width="40dp"
            android:contentDescription="@string/language_app_icon"
            android:padding="10dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_dark_mode_icon"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_setting_iv"
            />
        <TextView
            android:id="@+id/tv_mode_setting"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/iv_dark_mode_setting"
            android:text="@string/dark_mode_pref"
            tools:ignore="RelativeOverlap" />
        <Switch
            android:id="@+id/swith_mode"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/iv_dark_mode_setting"
            android:layout_marginTop="16dp"
            android:background="@color/setting_stroke" />
        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/iv_text_to_speech"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/separator"
            android:background="@drawable/bg_setting_iv"
            android:contentDescription="@string/language_app_icon"
            android:padding="10dp"
            android:src="@drawable/ic_text_speech" />
        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tv_text_to_speech"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:layout_below="@id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_dark_mode_setting"
            android:text="@string/text_to_speech"
            tools:ignore="RelativeOverlap" />
        <Switch
            android:layout_marginTop="20dp"
            android:layout_below="@id/separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:thumb="@drawable/thumb_normal"
            android:track="@drawable/track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>