<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0"
        tools:alpha="100">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mainAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/switch_menu"
            app:navigationIcon="@drawable/logo"
            app:title="@string/title_camera" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.camera.view.PreviewView
        android:contentDescription="@string/click_one"
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.camera.view.PreviewView
        android:visibility="gone"
        android:contentDescription="@string/click_one"
        android:id="@+id/viewFinder2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


    <View
        android:id="@+id/previewArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/left_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/scanner"
        app:layout_constraintTop_toTopOf="@id/previewArea"
        app:layout_constraintLeft_toLeftOf="@id/previewArea"
        tools:ignore="ContentDescription,VisualLintBounds" />
    
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/scanner"
        android:rotation="90"
        app:layout_constraintTop_toTopOf="@id/previewArea"
        app:layout_constraintRight_toRightOf="@id/previewArea"
        tools:ignore="ContentDescription,VisualLintBounds" />
    
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/scanner"
        android:rotation="270"
        app:layout_constraintBottom_toBottomOf="@id/previewArea"
        app:layout_constraintLeft_toLeftOf="@id/previewArea"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/scanner"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@id/previewArea"
        app:layout_constraintRight_toRightOf="@id/previewArea"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <RelativeLayout
        android:id="@+id/notification_result"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_card_blue"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="@+id/previewArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/previewArea"
        tools:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_text_notif"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/baseline_check_circle_24"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/icon_text_notif"
                android:text="@string/verified"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_icon_notif" />
        </RelativeLayout>

        <TextView
            android:id="@+id/nominal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nominal_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:maxLines="2"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Rp.100.000" />

        <TextView
            android:id="@+id/nominal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:background="@drawable/rounded_card_blue_200"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Sepuluh Ribu Rupiah" />
    </RelativeLayout>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminate="true"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>